--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -17,4 +17,16 @@ jobs:
         run: ls -l templates/
 
       - name: Debug Full Directory Structure
-        run: tree
+        run: treejobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Check Current Directory
+        run: pwd && ls -l
+
+      - name: Debug Files in Templates
+        run: ls -l pru_calculator/templates/  # Pastikan ini direktori betul
+
